[package]
name = "etherparse_playground"
version = "0.3.0"
authors = ["Julian Schmid <info@julianschmid.name>"]
edition = "2018"

[features]
listen = ["pcap"]

[[bin]]
name = "slice"
path = "src/slice.rs"

[[bin]]
name = "memmap_slice"
path = "src/memmap_slice.rs"

[[bin]]
name = "decode"
path = "src/decode.rs"

[[bin]]
name = "calc_csv_stats"
path = "src/calc_csv_stats.rs"

# listen depends on pcap which is currently not working on windows
# as such it has been moved into a feature to enable builds
# on windows
[[bin]]
name = "listen"
path = "src/listen.rs"
required-features = ["listen"]

[[bin]]
name = "listen_errors"
path = "src/listen_errors.rs"
required-features = ["listen"]

[[bin]]
name = "list_ifaces"
path = "src/list_ifaces.rs"
required-features = ["listen"]


[dependencies]
rpcap = "1.0.0"
byteorder = "1.5.0"
etherparse = "0.14.2"
time = "0.3.34"
clap = { version = "4.4.18", features = ["derive"]}
csv = "1.3.0"
serde = "1.0.196"
serde_derive = "1.0.196"
glob = "0.3.1"
memmap = "0.7.0"
pcap-parser = "0.14.1"

# for listen
pcap = { version = "1.2.0", optional = true }

[profile.release]
#opt-level = "s"
lto = true
#panic = "abort"
#codegen-units = 1